--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,13 @@ body {
   align-items: center;
   justify-content: center;
 }
+.survey-finish {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .survey-light {
   border: 5px solid var(--light-accent-color);
   border-radius: 5%;
@@ -82,6 +89,13 @@ body {
   border-radius: 5%;
 }
 .btn {
+  margin-top: 20px;
+  padding: 7px 15px;
+  font-size: 19px;
+  border: 3px solid transparent;
+  border-radius: 5%;
+}
+.btn-finish {
   margin-top: 20px;
   padding: 7px 15px;
   font-size: 19px;
