--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,10 @@ body {
 }
 #heading h1 {
   font-size: 50px;
+  width: 70%;
+  margin: auto;
   margin-bottom: 50px;
+  margin-top: 30px;
 }
 #theme-button {
   float: right;
@@ -154,4 +157,23 @@ select {
 }
 .form-group {
   margin-top: 10px;
+}
+
+@media only screen and (max-width: 650px) {
+  #heading h1 {
+    font-size: 30px;
+  }
+  #theme-button img {
+    width: 33px;
+  }
+  select {
+    font-size: 12px;
+    padding: 3px;
+  }
+  #survey-questions {
+    max-width: 800px;
+    margin: auto;
+    margin-top: 30px;
+    font-size: 20px;
+  }
 }
